<resources>
    <string name="app_name">Hospital Prescription</string>
    <string name="hi">HI</string>
    <string name="changetxt">ChangeTxt</string>
    <string name="change_text">change text</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="registration">Registration</string>
    <string name="confirm">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="don_t_have_account_register_now">Don\'t have account? Register Now!</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="upload_btn">Upload</string>
    <string name="doctors_name">Doctors name</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="dr_prescription">Dr prescription</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="image">Image</string>
    <string name="prescription">Prescription</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="prescription_date">Prescription Date</string>
    <string name="loading">Loading...</string>
    <string name="amas_spreath">AMAS SPREATH</string>
    <string name="healthy_life_smartlife">healthy life smartlife</string>
</resources>